src/objects/Core_IPS_Product__c.object
<CustomObject>
    <fields>
        <fullName>Core_IPS_IsAutoApprove__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to check if the Product is of type Auto Approve</description>
        <label>IsAutoApprove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Prodcut_Org__c</fullName>
        <formula>Core_Supported_Product__r.Core_Product_Organization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Product_Status__c</fullName>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_IPS_Project__c</fullName>
        <label>Premier Support Project</label>
        <referenceTo>Core_IPS_Project__c</referenceTo>
        <relationshipLabel>Premier Support Project Products</relationshipLabel>
        <relationshipName>IPS_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_Intel_Product_Status__c</fullName>
        <formula>Text(Core_Intel_Product__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intel Product Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Intel_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intel Product</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>IPS_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_IsSubmitted_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSubmitted-Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Supported_Product_Name__c</fullName>
        <formula>Core_Supported_Product__r.Core_Supported_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supported Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Supported_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supported Product</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Core_IPS_Supported_Product__c.Core_EOIS__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Core_IPS_Supported_Product__c.Core_Flag_Status__c</field>
                <operation>notContain</operation>
                <value>Par Hidden</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Core_IPS_Supported_Product__c</referenceTo>
        <relationshipName>IPS_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Application__c</fullName>
        <formula>Core_Supported_Product__r.Core_Product_Organization__r.Core_Organization_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Focus Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Auto Approve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Premier Support Project Product</label>
    <nameField>
        <displayFormat>PN-{0000000}</displayFormat>
        <label>Premier Support Project Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Premier Support Project Products</pluralLabel>
    <recordTypes>
        <fullName>Core_IPS_Project_Product</fullName>
        <active>true</active>
        <description>This is to display the page layout that do not have the approval history related list</description>
        <label>IPS Project Product(Basic)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_IPS_Project_Product_Approval</fullName>
        <active>true</active>
        <description>This is to display the page layout that have the approval history related list</description>
        <label>IPS Project Product(Approval)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Core_IPS_PreventParHidden</fullName>
        <active>false</active>
        <description>This is to prevent PAR Hidden type Supported Products from being added</description>
        <errorConditionFormula>ISPICKVAL(Core_Supported_Product__r.Core_Flag_Status__c, &quot;Par Hidden&quot;)</errorConditionFormula>
        <errorMessage>Cannot Add Par Hidden Type Supported Product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Core_IPS_PreventProductLookupChange</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Core_Supported_Product__c)</errorConditionFormula>
        <errorMessage>Changes to Supported Product Lookup are not allowed</errorMessage>
    </validationRules>
</CustomObject>